Bug 469865 - Crash when exporting scans to PDF
Summary: Crash when exporting scans to PDF
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.1
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
: 470417 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-05-16 20:13 UTC by Samega 7Cattac
Modified: 2023-06-03 02:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samega 7Cattac 2023-05-16 20:13:45 UTC
SUMMARY
When scans anything and clicks on the button on the top to export to pdf it crashes.

STEPS TO REPRODUCE
1. Scan a page
2. Click on "Export PDF" in the top bar
3. Click on "Save"
4. *Kabooom*

OBSERVED RESULT
Crashes and creates a pdf with 0 pages

EXPECTED RESULT
Export my scans as a PDF

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
When running from the terminal:

$ skanpage 
Error opening data file /usr/share/tessdata/eng.traineddata
Please make sure the TESSDATA_PREFIX environment variable is set to your "tessdata" directory.
Failed loading language 'eng'
Tesseract couldn't load any languages!
Cannot initialize model with data QJsonObject(). missing: QJsonValue(string, "urls")
file:///usr/lib/qt/qml/org/kde/kirigami.2/AboutItem.qml:214: ReferenceError: page is not defined
22 -- exe=/usr/bin/skanpage
17 -- platform=wayland
17 -- appname=skanpage
17 -- apppath=/usr/bin
10 -- signal=11
9 -- pid=3973
19 -- appversion=23.04.1
21 -- programname=Skanpage
63 -- bugaddress=https://bugs.kde.org/enter_bug.cgi?product=skanpage
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = skanpage path = /usr/bin pid = 3973
KCrash: Arguments: /usr/bin/skanpage 
KCrash: Attempting to start /usr/lib/drkonqi
QSocketNotifier: Invalid socket 35 and type 'Read', disabling...
QSocketNotifier: Invalid socket 36 and type 'Read', disabling...
QSocketNotifier: Invalid socket 37 and type 'Exception', disabling...
QSocketNotifier: Invalid socket 38 and type 'Read', disabling...
QSocketNotifier: Invalid socket 46 and type 'Read', disabling...
QSocketNotifier: Invalid socket 48 and type 'Read', disabling...
QSocketNotifier: Invalid socket 50 and type 'Read', disabling...
QSocketNotifier: Invalid socket 41 and type 'Read', disabling...
QSocketNotifier: Invalid socket 54 and type 'Read', disabling...
kf5idletime_wayland: This plugin does not support polling idle time
[1]  + 3973 suspended (signal)  skanpage
QSocketNotifier: Invalid socket 6 and type 'Read', disabling...
QSocketNotifier: Invalid socket 40 and type 'Read', disabling...
Unable to start Dr. Konqi
Re-raising signal for core dump handling.

[1]  + 3973 segmentation fault (core dumped)  skanpage


COREDUMP

                Stack trace of thread 2978:
                #0  0x00007fed0ca9f26c n/a (libc.so.6 + 0x8926c)
                #1  0x00007fed0ca4fa08 raise (libc.so.6 + 0x39a08)
                #2  0x00007fed0e28381f _ZN6KCrash19defaultCrashHandlerEi (libKF5Crash.so.5 + 0x781f)
                #3  0x00007fed0ca4fab0 n/a (libc.so.6 + 0x39ab0)
                #4  0x00007fed0dea5e60 _ZN9tesseract9Tesseract15recog_all_wordsEPNS_8PAGE_RESEPNS_10ETEXT_DESCEPKNS_4TBOXEPKci (libtesseract.so.5 + 0xa5e60)
                #5  0x00007fed0de88e56 _ZN9tesseract11TessBaseAPI9RecognizeEPNS_10ETEXT_DESCE (libtesseract.so.5 + 0x88e56)
                #6  0x000055e585ae7e5c n/a (skanpage + 0x40e5c)
                #7  0x000055e585ace035 n/a (skanpage + 0x27035)
                #8  0x000055e585acd7c1 n/a (skanpage + 0x267c1)
                #9  0x000055e585ae4c69 n/a (skanpage + 0x3dc69)
                #10 0x000055e585ae461a n/a (skanpage + 0x3d61a)
                #11 0x000055e585ae3eb5 n/a (skanpage + 0x3ceb5)
                #12 0x00007fed0bab1c80 _ZN7QObject5eventEP6QEvent (libQt5Core.so.5 + 0x2b1c80)
                #13 0x00007fed0d378b5c _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x178b5c)
                #14 0x00007fed0ba8e028 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x28e028)
                #15 0x00007fed0ba8eb33 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt5Core.so.5 + 0x28eb33)
                #16 0x00007fed0bad4f58 n/a (libQt5Core.so.5 + 0x2d4f58)
                #17 0x00007fed0a50f53b g_main_context_dispatch (libglib-2.0.so.0 + 0x5a53b)
                #18 0x00007fed0a56c219 n/a (libglib-2.0.so.0 + 0xb7219)
                #19 0x00007fed0a50e1a2 g_main_context_iteration (libglib-2.0.so.0 + 0x591a2)
                #20 0x00007fed0bad8d3c _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2d8d3c)
                #21 0x00007fed0ba8668c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x28668c)
                #22 0x00007fed0b8e771f _ZN7QThread4execEv (libQt5Core.so.5 + 0xe771f)
                #23 0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #24 0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #25 0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2964:
                #0  0x00007fed0a50f009 g_main_context_prepare (libglib-2.0.so.0 + 0x5a009)
                #1  0x00007fed0a56bfe6 n/a (libglib-2.0.so.0 + 0xb6fe6)
                #2  0x00007fed0a50e1a2 g_main_context_iteration (libglib-2.0.so.0 + 0x591a2)
                #3  0x00007fed0bad8d5f _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2d8d5f)
                #4  0x00007fed0ba8668c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x28668c)
                #5  0x00007fed0b8e771f _ZN7QThread4execEv (libQt5Core.so.5 + 0xe771f)
                #6  0x00007fed0b0d7cba n/a (libQt5DBus.so.5 + 0x23cba)
                #7  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #8  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #9  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2965:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fed0b8eb6f4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0xeb6f4)
                #3  0x00007fed07522cd4 n/a (libQt5WaylandClient.so.5 + 0x72cd4)
                #4  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #5  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #6  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2968:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2980:
                #0  0x00007fed0bad0940 n/a (libQt5Core.so.5 + 0x2d0940)
                #1  0x00007fed0a50f10b g_main_context_prepare (libglib-2.0.so.0 + 0x5a10b)
                #2  0x00007fed0a56bfe6 n/a (libglib-2.0.so.0 + 0xb6fe6)
                #3  0x00007fed0a50e1a2 g_main_context_iteration (libglib-2.0.so.0 + 0x591a2)
                #4  0x00007fed0bad8d5f _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2d8d5f)
                #5  0x00007fed0ba8668c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x28668c)
                #6  0x00007fed0b8e771f _ZN7QThread4execEv (libQt5Core.so.5 + 0xe771f)
                #7  0x00007fed0c8c2410 n/a (libQt5Qml.so.5 + 0x2c2410)
                #8  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #9  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #10 0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2973:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2969:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2985:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2970:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2971:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2972:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3088:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2967:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3071:
                #0  0x00007fed0a50c759 n/a (libglib-2.0.so.0 + 0x57759)
                #1  0x00007fed0a50f8f3 g_main_context_check (libglib-2.0.so.0 + 0x5a8f3)
                #2  0x00007fed0a56c078 n/a (libglib-2.0.so.0 + 0xb7078)
                #3  0x00007fed0a50e1a2 g_main_context_iteration (libglib-2.0.so.0 + 0x591a2)
                #4  0x00007fed0bad8d5f _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2d8d5f)
                #5  0x00007fed0ba8668c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x28668c)
                #6  0x00007fed0b8e771f _ZN7QThread4execEv (libQt5Core.so.5 + 0xe771f)
                #7  0x00007fed0cd5613f n/a (libQt5Quick.so.5 + 0x15613f)
                #8  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #9  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #10 0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2984:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2988:
                #0  0x00007fed0cae59e5 clock_nanosleep (libc.so.6 + 0xcf9e5)
                #1  0x00007fed0caea5e7 __nanosleep (libc.so.6 + 0xd45e7)
                #2  0x00007fed0b8dfac7 _ZN7QThread6msleepEm (libQt5Core.so.5 + 0xdfac7)
                #3  0x00007fed0cdf8c71 n/a (libQt5Quick.so.5 + 0x1f8c71)
                #4  0x00007fed0cdfcbe4 n/a (libQt5Quick.so.5 + 0x1fcbe4)
                #5  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #6  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #7  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2966:
                #0  0x00007fed0cb13c0f __poll (libc.so.6 + 0xfdc0f)
                #1  0x00007fed07522d2d n/a (libQt5WaylandClient.so.5 + 0x72d2d)
                #2  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #3  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #4  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2986:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2989:
                #0  0x00007fed0cb13c0f __poll (libc.so.6 + 0xfdc0f)
                #1  0x00007fecf3f64340 n/a (libavahi-common.so.3 + 0x3340)
                #2  0x00007fecf3f66f21 avahi_simple_poll_run (libavahi-common.so.3 + 0x5f21)
                #3  0x00007fecf3f67101 avahi_simple_poll_iterate (libavahi-common.so.3 + 0x6101)
                #4  0x00007fecf3f67316 avahi_simple_poll_loop (libavahi-common.so.3 + 0x6316)
                #5  0x00007fecf3f6739f n/a (libavahi-common.so.3 + 0x639f)
                #6  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #7  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 2963:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fed0b8eb6f4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0xeb6f4)
                #3  0x00007fed0ce01300 n/a (libQt5Quick.so.5 + 0x201300)
                #4  0x00007fed0ce52643 _ZN12QQuickWindow5eventEP6QEvent (libQt5Quick.so.5 + 0x252643)
                #5  0x00007fed0d378b5c _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x178b5c)
                #6  0x00007fed0ba8e028 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x28e028)
                #7  0x00007fed0bf34410 _ZN15QPlatformWindow20deliverUpdateRequestEv (libQt5Gui.so.5 + 0x134410)
                #8  0x00007fed0bab1c80 _ZN7QObject5eventEP6QEvent (libQt5Core.so.5 + 0x2b1c80)
                #9  0x00007fed0d378b5c _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x178b5c)
                #10 0x00007fed0ba8e028 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x28e028)
                #11 0x00007fed0ba8eb33 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt5Core.so.5 + 0x28eb33)
                #12 0x00007fed0bad4f58 n/a (libQt5Core.so.5 + 0x2d4f58)
                #13 0x00007fed0a50f53b g_main_context_dispatch (libglib-2.0.so.0 + 0x5a53b)
                #14 0x00007fed0a56c219 n/a (libglib-2.0.so.0 + 0xb7219)
                #15 0x00007fed0a50e1a2 g_main_context_iteration (libglib-2.0.so.0 + 0x591a2)
                #16 0x00007fed0bad8d3c _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2d8d3c)
                #17 0x00007fed0ba8668c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x28668c)
                #18 0x00007fed0ba912f9 _ZN16QCoreApplication4execEv (libQt5Core.so.5 + 0x2912f9)
                #19 0x000055e585ad22a4 n/a (skanpage + 0x2b2a4)
                #20 0x00007fed0ca39850 n/a (libc.so.6 + 0x23850)
                #21 0x00007fed0ca3990a __libc_start_main (libc.so.6 + 0x2390a)
                #22 0x000055e585ab8855 n/a (skanpage + 0x11855)
                
                Stack trace of thread 2987:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3087:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3090:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3089:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fecfe0c256c n/a (iris_dri.so + 0xc256c)
                #3  0x00007fecfe10b98c n/a (iris_dri.so + 0x10b98c)
                #4  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #5  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                
                Stack trace of thread 3091:
                #0  0x00007fed0ca99f0e n/a (libc.so.6 + 0x83f0e)
                #1  0x00007fed0ca9c7a0 pthread_cond_wait (libc.so.6 + 0x867a0)
                #2  0x00007fed0b8eb6f4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt5Core.so.5 + 0xeb6f4)
                #3  0x00007fed0cdfcfc2 n/a (libQt5Quick.so.5 + 0x1fcfc2)
                #4  0x00007fed0b8e424a n/a (libQt5Core.so.5 + 0xe424a)
                #5  0x00007fed0ca9d44b n/a (libc.so.6 + 0x8744b)
                #6  0x00007fed0cb20e40 n/a (libc.so.6 + 0x10ae40)
                ELF object binary architecture: AMD x86-64
Comment 1 Nate Graham 2023-05-17 19:47:13 UTC
Crashing in tesseract, but it's hard to tell more without debug symbols. Can you install debug symbols for tesseract and skanpage and get a new backtrace? 

See:
- https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Arch_Linux
- https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl
Comment 2 Bug Janitor Service 2023-06-01 03:45:30 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2023-06-01 19:56:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/skanpage/-/merge_requests/50
Comment 4 John Doe 2023-06-01 19:58:30 UTC
*** Bug 470417 has been marked as a duplicate of this bug. ***
Comment 5 John Doe 2023-06-01 20:05:09 UTC
The console output basically tells you that the 'tesseract-data-eng' package is missing, you can install that to stop Skanpage from crashing.
Though it shouldn't be necessary to have that if you are not scanning documents in English.
Comment 6 John Doe 2023-06-02 14:45:53 UTC
Git commit 082cbeb9733aefc04d1b966d9087367876bd89d7 by John Doe.
Committed on 02/06/2023 at 13:50.
Pushed by ngraham into branch 'master'.

Do not hardcode English as the default OCR language

Instead let Tesseract figure that out itself.

Also disable the OCR checkbox if there are no installed languages.

M  +1    -1    src/OCREngine.cpp
M  +3    -1    src/qml/ExportWindow.qml

https://invent.kde.org/utilities/skanpage/-/commit/082cbeb9733aefc04d1b966d9087367876bd89d7
Comment 7 Nate Graham 2023-06-02 14:46:18 UTC
Git commit a3c1e88a67d0feee0d1801b9f19a584b86e481c8 by Nate Graham, on behalf of John Doe.
Committed on 02/06/2023 at 14:46.
Pushed by ngraham into branch 'release/23.04'.

Do not hardcode English as the default OCR language

Instead let Tesseract figure that out itself.

Also disable the OCR checkbox if there are no installed languages.


(cherry picked from commit 082cbeb9733aefc04d1b966d9087367876bd89d7)

M  +1    -1    src/OCREngine.cpp
M  +3    -1    src/qml/ExportWindow.qml

https://invent.kde.org/utilities/skanpage/-/commit/a3c1e88a67d0feee0d1801b9f19a584b86e481c8