Do not hardcode English as the default OCR language

Instead let Tesseract figure that out itself.

Also disable the OCR checkbox if there are no installed languages.

BUG: 469865